<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SupportActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/txtview_labelphonenumber1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_contact1"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            style="@style/fontColor"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:id="@+id/txtview_phonenumber1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonenumber1"
            android:layout_marginStart="16dp"
            android:textColor="#00BFFF"
            android:onClick="openDial"
            app:layout_constraintTop_toBottomOf="@id/txtview_labelphonenumber1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:id="@+id/txtview_labelphonenumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_contact2"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            style="@style/fontColor"
            app:layout_constraintTop_toBottomOf="@id/txtview_labelphonenumber1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:id="@+id/txtview_phonenumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonenumber2"
            android:layout_marginStart="16dp"
            android:textColor="#00BFFF"
            android:onClick="openDial"
            app:layout_constraintTop_toBottomOf="@id/txtview_labelphonenumber2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:id="@+id/txtview_labelemail1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email1"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            style="@style/fontColor"
            app:layout_constraintTop_toBottomOf="@id/txtview_labelphonenumber2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:id="@+id/txtview_email1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email1"
            android:layout_marginStart="16dp"
            android:textColor="#00BFFF"
            android:onClick="openEmail"
            app:layout_constraintTop_toBottomOf="@id/txtview_labelemail1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:id="@+id/txtview_labelemail2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email2"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            style="@style/fontColor"
            app:layout_constraintTop_toBottomOf="@id/txtview_labelemail1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:id="@+id/txtview_email2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email2"
            android:layout_marginStart="16dp"
            android:textColor="#00BFFF"
            android:onClick="openEmail"
            app:layout_constraintTop_toBottomOf="@id/txtview_labelemail2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"/>


        <Switch
            android:id="@+id/toogle_anonimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:text="@string/label_anonymous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtview_labelemail2"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Spinner
            android:id="@+id/spinner_reports_suggestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/toogle_anonimo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"/>

        <EditText
            android:id="@+id/input_suggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/spinner_reports_suggestions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/label_send"
            android:onClick="sendReportSuggestion"
            style="@style/next_btn"
            app:layout_constraintTop_toBottomOf="@id/input_suggestions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="1.0"/>

        <TextView
            android:id="@+id/txtview_poweredby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/label_poweredby"
            app:layout_constraintTop_toBottomOf="@id/btn_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ipc_logo"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintHorizontal_bias="0.0"/>

        <ImageView
            android:id="@+id/ipc_logo"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:src="@drawable/ipc_logo"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="22dp"
            app:layout_constraintTop_toBottomOf="@id/btn_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtview_poweredby"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintHorizontal_bias="1.0"
            android:contentDescription="@string/ipc_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>