<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".DashboardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dashboard_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar" />

        <TextView
            android:id="@+id/txtview_label_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/title_balance"
            style="@style/balance_label1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txtview_balance"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.1"/>

        <TextView
            android:id="@+id/txtview_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            style="@style/balance_label2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtview_label_balance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.1"/>

        <Button
            android:id="@+id/btn_meals"
            style="@style/dashboard_btn1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="openMenusActivity"
            android:text="@string/btn_meals"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_extract"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtview_label_balance"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:id="@+id/btn_extract"

            style="@style/dashboard_btn2"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="openExtractActivity"
            android:text="@string/btn_extract"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_meals"
            app:layout_constraintTop_toBottomOf="@id/txtview_balance"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:id="@+id/btn_support"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title_support"
            android:onClick="openSupportActivity"
            android:layout_marginTop="40dp"
            style="@style/dashboard_btn1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_profile"
            app:layout_constraintTop_toBottomOf="@id/btn_extract"
            app:layout_constraintVertical_bias="0.0"/>

        <Button
            android:id="@+id/btn_profile"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title_profile"
            android:onClick="openProfileActivity"
            android:layout_marginTop="40dp"
            style="@style/dashboard_btn2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_support"
            app:layout_constraintTop_toBottomOf="@id/btn_extract"
            app:layout_constraintVertical_bias="0.0"/>

        <Button
            android:id="@+id/btn_increasebalance"
            style="@style/dashboard_btn2"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="openIncreaseBalance"
            android:layout_marginTop="40dp"
            android:text="@string/btn_addbalance"
            android:visibility="invisible"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_registerMeals"
            app:layout_constraintTop_toBottomOf="@id/btn_support"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_registerMeals"
            style="@style/dashboard_btn1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="40dp"
            android:onClick="openRegisterMeals"
            android:text="@string/btn_registerMeals"
            android:visibility="invisible"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_increasebalance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_profile"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_insertmenus"
            style="@style/dashboard_btn2"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:onClick="openInsertMenus"
            android:text="@string/btn_insertmenus"
            android:visibility="invisible"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_scanqrcode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_registerMeals"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_scanqrcode"
            style="@style/dashboard_btn1"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="20dp"
            android:onClick="openScanQrCode"
            android:text="@string/btn_qrcode_scan"
            android:visibility="invisible"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toEndOf="@id/btn_insertmenus"
            app:layout_constraintTop_toBottomOf="@id/btn_increasebalance"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>